index.html changed

--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@ data-toggle="collapse" data-target=".nav-collapse">
 <!-- Folosim fonturi de la Google Fonts , cele pe care le-am declarat in style -->
 <div class="row-fluid heading">
 <div class="span12">
-<h1>Product</h1>
+<h1>Smart Kid's Library</h1>
 </div>
 </div>
 <div class="row-fluid subheading">
 <div class="span12">
-<p class="lead">One sentence description.</p>
+<p class="lead">A subscription based interactive educational library, for kid's up to 10 years</p>
 </div>
 </div>
 <div class="row-fluid pitch">
 <div class="span5 offset1 video">
-<img class="img-polaroid" src="http://placehold.it/480x300">
+<img class="img-polaroid" src="Picture1.PNG" width=420 height=300>
 </div>
 <!-- In continuare definim containerul pentru statistici si butoanele de share -->
 <div class="span5 actions">
@@ -143,17 +143,17 @@ data-toggle="collapse" data-target=".nav-collapse">
 <div class="statistics">
 <div class="span4">
 <div class="linediv-l">
-<h3>1000</h3> <p>backers</p>
+<h3>0</h3> <p>backers</p>
 </div>
 </div>
 <div class="span4">
 <div class="linediv-c">
-<h3>$6000</h3> <p>of $10,000</p>
+<h3>$0</h3> <p>of $100,000</p>
 </div>
 </div>
 <div class="span4">
 <div class="linediv-r">
-<h3>10</h3> <p>days left</p>
+<h3>60</h3> <p>days left</p>
 </div>
 </div>
 </div>
@@ -162,8 +162,8 @@ data-toggle="collapse" data-target=".nav-collapse">
 <!-- Bootsrap progress bar -->
 <!-- http://twitter.github.io/bootstrap/components.html#progress -->
 <div class="thermometer progress active">
-<div class="bar bar-success" style="width: 60%;"></div>
-<div class="bar bar-warning" style="width: 40%;"></div>
+<div class="bar bar-success" style="width: 0%;"></div>
+<div class="bar bar-warning" style="width: 100%;"></div>
 </div>
 </div>
 <div class="span6 offset3 order">
@@ -180,21 +180,19 @@ data-toggle="collapse" data-target=".nav-collapse">
 <!-- Beyont this part the marketing copy begins -->
 <div class="row-fluid section1">
 <div class="span5 offset1 asset">
-<img class="img-polaroid" src="http://placehold.it/480x300">
+<img class="img-polaroid" src="Picture2.PNG" height=400 width=300>
 </div>
 <div class="span5 copy">
 <p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-officia deserunt mollit anim id est laborum.
+Library app is available for all smart phone stores like Itunes, android play store and windows 8. 
+It’s a collation of interactive applications, helps kid’s learn while playing. For teaching Abcd  itself we may have more than 10 different interactive apps. 
+This will help parents to teach guide and evaluate their kids with fun. 
+Major app categories planned in first release are 1) Learn ABC  2)Rhymes 3)Learn Numbers  4)Fun Math 5)Learn colors 6)Quiz 7)Fun books 8)GK.  
+Every month new apps and categories are added to library.
 </p>
 </div>
 </div>
-
+<!--
 <div class="row-fluid section2">
 <div class="span5 offset1 copy copy-right">
 <p>
@@ -211,6 +209,7 @@ officia deserunt mollit anim id est laborum.
 <img class="img-polaroid" src="http://placehold.it/480x300">
 </div>
 </div>
+-->
 <!-- This brings in jquery.js and bootstrap.js as dependncies-->
 <div class="row-fluid faq">
 <div class="span10 offset1">
